# MobileTrafficClassification

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: cells_14032026.parquet  dataset_25022026.parquet
src/: data_pro.py  main.py  model.py  notebook.py  plot_functions.py
src/notebooks/: example.py
src/tdcnet_mtc/: __init__.py  constants.py
