[project]
name = "tdcnet-mtc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jakob Thrane", email = "jthr@tdcnet.dk" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "marimo>=0.20.2",
    "matplotlib>=3.10.8",
    "polars>=1.38.1",
]

[project.scripts]
tdcnet-mtc = "tdcnet_mtc:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
